# elbow

./: .gitignore  CMakeLists.txt  README  TODO
data/themes/: CMakeLists.txt  elbow.edc  elbow.edj  webkit.edc
data/themes/widget/scrollbar/: scrollbar.edc
src/: app.c  app.h  bookmark.c  browser.c  browser.h  homescreen.c  homescreen.h  log.c  log.h  main.c  webview.c  webview.h  webview_elm.c  webview_ewk.c  webview_ewk2.c
src/bookmark/: bookmark.c  bookmark.h
src/database/: bookmark.c  bookmark.h
src/tests/: CMakeLists.txt  test_bookmark.c
